# tuber

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/tuber-common/: Cargo.toml
crates/tuber-common/src/: tilemap.rs  transform.rs
crates/tuber-core/: Cargo.toml
crates/tuber-core/src/: input.rs  lib.rs
crates/tuber-ecs/: Cargo.toml  README.md
crates/tuber-ecs/src/: archetype.rs  bitset.rs  component_bundle.rs  ecs.rs  lib.rs  query.rs  system.rs
crates/tuber-graphics/: Cargo.toml
crates/tuber-graphics-wgpu/: Cargo.toml  build.rs
crates/tuber-graphics-wgpu/src/: bounding_box_renderer.rs  lib.rs  mesh_2d_renderer.rs  quad_renderer.rs  rectangle_renderer.rs  shader.vert  shader.vert.spv  sprite_renderer.rs  texture.rs  tilemap_render.rs  tilemap_renderer.rs
crates/tuber-graphics-wgpu/src/shaders/: colored_shader.vert  line_shader.vert  mesh_2d_shader.vert  textured_shader.frag  textured_shader.vert
crates/tuber-graphics/src/: bitmap_font.rs  camera.rs  lib.rs  low_level.rs  shape.rs  sprite.rs  texture.rs  tilemap.rs  transform.rs  ui.rs
crates/tuber-physics/: Cargo.toml
crates/tuber-physics/src/: lib.rs  sat.rs
crates/tuber-window/: Cargo.toml
crates/tuber-winit/: Cargo.toml
crates/tuber-winit/src/: lib.rs
examples/: basic_game.rs
examples/basic-application/: Cargo.toml  main.rs
examples/basic-application/src/: main.rs
examples/bitmap-font/: font.json  font_atlas.json  main.rs
examples/camera/: main.rs
examples/collisions/: main.rs
examples/platformer/: main.rs
examples/snake/: main.rs
examples/sprite/: main.rs  texture-atlas.json
examples/tennis/: Cargo.toml  main.rs
examples/tennis/src/: main.rs
examples/tilemap/: main.rs  tiles.json
examples/ui/: font.json  font_atlas.json  main.rs
src/: ecs.rs  graphics.rs  lib.rs  resource_manager.rs
src/platform/: wgpu.rs
src/shaders/: quad.vert  triangle.frag  triangle.vert
src/window/: mod.rs
