[package]
name = "tuber"
version = "0.1.0"
authors = ["Clément Sibille <clement.sibille@protonmail.com>"]
edition = "2018"

[workspace]
members = ["examples/*", "crates/*"]

[features]
default = []

[[bin]]
name = "basic_application"
path = "examples/basic-application/src/main.rs"

[dependencies]
tuber-core = { path = "crates/tuber-core", version = "0.1.0" }
tuber-graphics = { path = "crates/tuber-graphics", version = "0.1.0" }
tuber-winit = { path = "crates/tuber-winit", version = "0.1.0" }