[package]
name = "tuber-graphics-wgpu"
version = "0.1.0"
authors = ["Clément Sibille <claymeuns@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuber-graphics = { path = "../tuber-graphics" }
wgpu = "0.7.0"