[package]
name = "tuber-graphics"
version = "0.1.0"
authors = ["Clément Sibille <claymeuns@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tuber-ecs = { path = "../tuber-ecs" }
raw-window-handle = "0.3.3"