[package]
name = "tuber-physics"
version = "0.1.0"
authors = ["Clément Sibille <claymeuns@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.27"
tuber-core = { path = "../tuber-core" }
tuber-ecs = { path = "../tuber-ecs" }
tuber-common = { path = "../tuber-common" }
tuber-graphics = { path = "../tuber-graphics" }