[package]
name = "tuber-winit"
version = "0.1.0"
authors = ["Clément Sibille <claymeuns@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
tuber-core = { path = "../tuber-core", version = "0.1.0" }
tuber-graphics = { path = "../tuber-graphics", version = "0.1.0" }
raw-window-handle = "0.3.3"
